- Modified limitRequest to allow negative limits to pass through to Mongo, added test (Issue #561)
- Corrupt GridFS files when chunkSize < fileSize, fixed concurrency issue (Issue #555)
- Handle dead tailable cursors (Issue #568, https://github.com/aheckmann)
- Connection pools handles closing themselves down and clearing the state

0.9.9.7 2012-03-16
------------------
- Stats not returned from map reduce with inline results (Issue #542)
- Re-enable testing of whether or not the callback is called in the multi-chunk seek, fix small GridStore bug (Issue #543, https://github.com/pgebheim)
- Streaming large files from GridFS causes truncation (Issue #540)
- Make callback type checks agnostic to V8 context boundaries (Issue #545)
- Correctly throw error if an attempt is made to execute an insert/update/remove/createIndex/ensureIndex with safe enabled and no callback
- Db.open throws if the application attemps to call open again without calling close first

0.9.9.6 2012-03-12
------------------
- BSON parser is externalized in it's own repository, currently using git master
- Fixes for Replicaset connectivity issue (Issue #537)
- Fixed issues with node 0.4.X vs 0.6.X (Issue #534)
- Removed SimpleEmitter and replaced with standard EventEmitter
- GridStore.seek fails to change chunks and call callback when in read mode (Issue #532)

0.9.9.5 2012-03-07
------------------
- Merged in replSetGetStatus helper to admin class (Issue #515, https://github.com/mojodna)
- Merged in serverStatus helper to admin class (Issue #516, https://github.com/mojodna)
- Fixed memory leak in C++ bson parser (Issue #526)
- Fix empty MongoError "message" property (Issue #530, https://github.com/aheckmann)
- Cannot save files with the same file name to GridFS (Issue #531)

0.9.9.4 2012-02-26
------------------
* bugfix for findAndModify: Error: corrupt bson message < 5 bytes long (Issue #519)

0.9.9.3 2012-02-23
------------------