@@ -419,13 +419,14 @@ Collection.prototype.update = function update(selector, document, options, callb
     this.db._executeUpdateCommand(updateCommand, commandOptions, function (err, error) {
       error = error && error.documents;
       if(!callback) return;      
-      
+
       if(err) {
         callback(err);
       } else if(error[0].err || error[0].errmsg) {
         callback(self.db.wrap(error[0]));
       } else {
-        callback(null, error[0].n);
+        // Perform the callback
+        callback(null, error[0].n, error[0]);
       }      
     });    
   } else {
