@@ -5,6 +5,7 @@
 - Corrupt GridFS files when chunkSize < fileSize, fixed concurrency issue (Issue #555)
 - Handle dead tailable cursors (Issue #568, https://github.com/aheckmann)
 - Connection pools handles closing themselves down and clearing the state
+- Check bson size of documents against maxBsonSize and throw client error instead of server error, (Issue #553)
 
 0.9.9.7 2012-03-16
 ------------------
